 
	
   [*] Changes that are 100% compatible with existing client code.  
  [**] Changes that requiring little or no modification to existing
       client code. 
 [***] Changes requiring important modifications to existing client code.

 ??, 2002
 
 - Release of version 1.2 

 (beta2)

 - Source code written for log4j 1.1.3.jar will compile fine with
   log4j 1.2X. However, code compiled for log4j 1.1.3 would
   systematically throw "java.lang.NoSuchMethodError" runtime exceptions
   when run with log4j 1.2 - prior to beta2. This problem has been
   corrected in beta2. Pheew, that was a close one. [*]

 - Log4j 1.2 is now backward compatible in serialization of
   LoggingEvents. For example, a 1.1.3 SocketAppedner can write to 1.2
   SocketServer. Similarly a 1.2 JMSAppender will work with 1.1.3
   JMSSink. This should ease the move to log4j 1.2, especially in
   large deployments. [*]

 (alpha7)

 - The src/java/org/apache/log4j/examples/ directory moved under the
   top-level directory as examples/. [*]

 - Fixed the ArrayIndexOutOfBoundsException that was thrown by
   AsyncAppender if multiple threads were trying to log an event
   containing an exception near simultaneously. Thanks to Thomas Tuft Muller
   for reporting this bug. [*]

 (alpha1-alpha6)

 - Improved error reporting in DOMConfigurator. Thanks to Thomas Tuft
   Muller for contributing the enhancement. [*]
	
 - Log4j is now configurable using JMX. JMX support is not of
   production quality. [*]

 - Added support for different encodings in WriterAppender. Thanks to
   Ben Sandee for submitting the relevant patch. [*]

 - Modified SMTPAppender to allow multiple email sessions. Thanks to
   Jon Skeet for supplying the relevant patch. [*]

 - The CategoryFactory class has been replaced by the LoggerFactory
   class. The makeNewCategoryInstance method has been renamed as
   makeNewLoggerInstance. This change requires subclasses of Category
   classes to be modified and recompiled. [**]
