@@ -9,6 +9,14 @@
  
  - Release of version 1.2 
 
+ (beta3)
+  
+ - Fixed the complaints the compiler issued when using the
+   Logger.setLevel() methd. [*]
+
+ - Incorporated the performance enhancements to ISO8601DateFormat and
+   AbsoluteTimeDateFormat classes submitted by Andrew Vajoczki.
+
  (beta2)
 
  - Source code written for log4j 1.1.3.jar will compile fine with
